force-app/main/default/objects/CR_Version_Task_Group_Member__c/CR_Version_Task_Group_Member__c.object-meta.xml
<CustomObject>
    <label>CR Version Task Group Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Membership #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Version Task Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>