force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/CR_Version_Task_Group__c.field-meta.xml
<CustomField>
    <fullName>CR_Version_Task_Group__c</fullName>
    <label>CR Version Task Group</label>
    <referenceTo>CR_Version_Task_Group__c</referenceTo>
    <relationshipLabel>CR Version Task Group Members</relationshipLabel>
    <relationshipName>CR_Version_Task_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>