force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CR_Version_Task_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>