force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Open_Links_In_New_Window__c.field-meta.xml
<CustomField>
    <fullName>Open_Links_In_New_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the links on the developer home page to be opened in a new window.  If set to false then the links open web pages in the same window.</description>
    <inlineHelpText>Allows the links on the developer home page to be opened in a new window.  If set to false then the links open web pages in the same window.</inlineHelpText>
    <label>Open Links In New Window</label>
    <type>Checkbox</type>
</CustomField>