force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Receive_Passed_Closed_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Receive_Passed_Closed_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set, whenever a version goes to passed or a closed status, the dev&apos;s assigned to the version are alerted of the status change.</description>
    <inlineHelpText>If set, whenever a version goes to passed or a closed status, the dev&apos;s assigned to the version are alerted of the status change.</inlineHelpText>
    <label>Receive Passed/Closed Email Alerts</label>
    <type>Checkbox</type>
</CustomField>