force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Row_Display_Limit__c.field-meta.xml
<CustomField>
    <fullName>Row_Display_Limit__c</fullName>
    <description>Will keep track of how many rows are displayed for the developer home page and maybe tester page.</description>
    <inlineHelpText>Will keep track of how many rows are displayed for the developer home page and maybe tester page.</inlineHelpText>
    <label>Row Display Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>