force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Sort_Tests_Ascending__c.field-meta.xml
<CustomField>
    <fullName>Sort_Tests_Ascending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sort Tests Ascending</label>
    <type>Checkbox</type>
</CustomField>