force-app/main/default/objects/CR_Version_Task_Group_Member__c/fields/Test_Sorting_Preference__c.field-meta.xml
<CustomField>
    <fullName>Test_Sorting_Preference__c</fullName>
    <description>User&apos;s sorting preference for the test runs list on the Tester Home</description>
    <label>Test Sorting Preference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>